--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -638,6 +638,8 @@ footer {
                 margin-bottom: 12px;
                 img{
                     width: 100%;
+                    height: 170px;
+                    object-fit: contain;
                 }
             }
             &__inner{
