правки по страницам наполение и техника

--- a/src/css/_old_main.scss
+++ b/src/css/_old_main.scss
@@ -3306,7 +3306,7 @@ svg {
 
     &::before {
         content: '';
-        background-image: url(../images/stack/sprite.svg#bahandi-grid);
+        background-image: url(../images/bahandi-grid.svg);
         background-size: cover;
         background-position: center;
         position: absolute;
