--- a/src/templates/_header.html
+++ b/src/templates/_header.html
@@ -7,7 +7,7 @@
             </div>
             <ul class="header__nav">
                 <li><a href="#">О нас</a></li>
-                <li><a href="#">Конструктор</a></li>
+                <li><a href="#" class="_active">Конструктор</a></li>
                 <li><a href="#">Пакеты</a></li>
                 <li><a href="#">Как мы работаем</a></li>
                 <li><a href="#">FAQ</a></li>
