--- a/src/css/_media.scss
+++ b/src/css/_media.scss
@@ -355,6 +355,12 @@
                     display: flex;
                     flex-direction: column;
                 }
+                &__image{
+                    img{
+                        width: 30px;
+                        height: 26px;
+                    }
+                }
             }
             &__description{
                 background-color: transparent;
@@ -375,9 +381,13 @@
                 &-price{
                     margin-top: 16px;
                 }
+                &-list{
+                    max-width: 100%;
+                }
             }
         }
-        .filter-constructor._filling-desc{
+        .filter-constructor._filling-desc,
+        .filter-constructor__top._mob-none{
             display: none;
         }
         .services{
@@ -618,6 +628,10 @@
                 line-height: 24px;
                 &:first-child{
                     margin-right: auto;
+                    margin-left: 0;
+                }
+                &:nth-child(2){
+                    margin-left: 0;
                 }
                 &:last-child{
                     margin-left: auto;
@@ -646,7 +660,7 @@
                 border-left: none;
                 margin-bottom: 16px;
                 order: -1;
-                .select{
+                .select2{
                     max-width: max-content;
                 }
             }
@@ -988,8 +1002,10 @@
                 padding: 14px 12px;
             }
             &__select{
-                .select.select_style1  select{
+                .select2.select_style1  select{
                     font-weight: bold;
+                    font-size: 12px;
+                    line-height: 16px;
                 }
             }
         }
@@ -1027,6 +1043,11 @@
                     max-width: 100%;
                     width: 100%;
                     height: 32px;
+                }
+                &__image{
+                    img{
+                        height: 104px;
+                    }
                 }
             }
             &-product{
