--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -117,6 +117,9 @@ footer {
 
             a {
                 color: #404040;
+                &._active{
+                    color: #1374CF;
+                }
             }
         }
     }
@@ -382,7 +385,7 @@ footer {
             }
         }
     }
-    .select {
+    .select2 {
         display: block;
         position: relative;
         cursor: pointer;
@@ -414,13 +417,14 @@ footer {
         }
         &.select_style1{
             select{
+                background: none !important;
                 padding: 0;
                 padding-right: 18px;
                 border: none;
                 font-weight: 400;
                 height: 20px;
             }
-            .select__arrow{
+            .select2__arrow{
                 right: 0;
             }
         }
@@ -1085,9 +1089,6 @@ footer {
                 &::after{
                     opacity: 1;
                 }
-                .aside-constructor__item-title{
-                    color: #1374CF;
-                }
             }
             &::after{
                 content: '';
@@ -1146,6 +1147,10 @@ footer {
                 .filling-product{
                     &__image{
                         align-self: flex-start;
+                        img{
+                            width: 22px;
+                            height: 22px;
+                        }
                     }
                     &__price-old{
                         display: none;
@@ -1176,6 +1181,12 @@ footer {
                 margin-right: 8px;
                 display: flex;
                 align-items: center;    
+                img{
+                    width: 58px;
+                    height: 58px;
+                    object-fit: cover;
+                    display: block;
+                }
             }
             &__type{
                 font-size: 10px;
@@ -1231,8 +1242,8 @@ footer {
                 img{
                     display: block;
                     width: 100%;
-                    height: 100%;
-                    object-fit: cover;
+                    height: 138px;
+                    object-fit: contain;
                 }
             }
             &__discount{
@@ -1350,7 +1361,11 @@ footer {
             }
             &-image{
                 img{
-                    max-width: 100%;
+                    display: block;
+                    max-width: 297px;
+                    width: 100%;
+                    height: 198px;
+                    object-fit: contain;
                 }
             }
             &-price{
@@ -1377,6 +1392,7 @@ footer {
                 justify-content: space-between;
             }
             &-list{
+                max-width: 277px;
                 flex-shrink: 0;
                 margin-right: 30px;
                 li{
@@ -1477,11 +1493,6 @@ footer {
             .pagination-arrow{
                 display: flex;
                 align-items: center;
-                &._arrow-next{
-                    svg{
-                        transform: rotateZ(180deg);
-                    }
-                }
             }
             li{
                 font-weight: bold;
@@ -1740,7 +1751,9 @@ footer {
             &__wrapper{
                 display: flex;
                 flex-direction: column;
-                max-width: 117px;
+                max-width: 119px;
+                width: 100%;
+                flex-shrink: 0;
             }
             &__name{
                 font-weight: bold;
@@ -1776,7 +1789,10 @@ footer {
                 padding-bottom: 22px;
                 img{
                     display: block;
+                    max-width: 117px;
                     width: 100%;
+                    height: 102px;
+                    object-fit: contain;
                 }
             }
             &__list{
@@ -2441,3 +2457,4 @@ footer {
 }
 
 @import "media";
+@import "old_media";
