--- a/src/templates/_head.html
+++ b/src/templates/_head.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>SMART Remont</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com"> 
-	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/vendor.min.css">
 	<link rel="stylesheet" href="css/main.min.css">
 </head>
