--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -552,12 +552,16 @@ footer {
 
 
     .header-back-to{
+        display: none;
         position: fixed;
         z-index: 99;
         width: 100%;
         left: 0;
         top: 0;
         box-shadow: 0px 2px 16px rgba(0, 0, 0, 0.06);
+        .back{
+            display: block !important;
+        }
     }
 
     .onboarding{
@@ -2368,6 +2372,119 @@ footer {
         }
     }
 
+    .finishing-backdrop{
+        max-width: 541px;
+        width: 100%;
+        background-color: #FFFFFF;
+        box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.16);
+        border-radius: 12px;
+        padding: 16px;
+        &__top{
+            margin-bottom: 20px;
+            .back__link{
+                svg{
+                    width: 16px;
+                    height: 16px;
+                    margin-right: 4px;
+                }
+                font-size: 14px;
+                line-height: 20px;
+            }
+        }
+        &__box{
+            overflow-y: auto;
+            height: 168px;
+        }
+        &__title{
+            font-weight: bold;
+            font-size: 16px;
+            line-height: 22px;
+            color: #595959;
+        }
+        &__subtitle{
+            font-size: 10px;
+            line-height: 14px;
+            color: #AAAAAA;
+        }
+        &__text{
+            margin-top: 14px;
+            font-size: 12px;
+            line-height: 20px;
+            color: #595959;
+        }
+    }
+    .finishing-modal{
+        max-width: 541px;
+        width: 100%;
+        background-color: #FFFFFF;
+        box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.16);
+        border-radius: 12px;
+        position: relative;
+        padding: 16px;
+        &__close{
+            position: absolute;
+            right: 16px;
+            top: 16px;
+            svg{
+                display: block;
+            }
+        }
+        &__title{
+            padding-right: 40px;
+            font-weight: bold;
+            font-size: 14px;
+            line-height: 20px;
+            color: #595959;
+        }
+        &__subtitle{
+            font-size: 12px;
+            line-height: 16px;
+            color: #595959;
+            margin-bottom: 16px;
+        }
+        &__scroll-box{
+            overflow-x: auto;
+            padding-bottom: 14px;
+            border-bottom: 1px solid #E8E8E8;
+            display: flex;
+            margin-right: -16px;
+            .material{
+                & + .material{
+                    margin-left: 12px;
+                }
+            }
+        }
+    }
+    .material{
+        display: block;
+        width: 72px;
+        &__image{
+            width: 60px;
+            height: 60px;
+            margin: 0 6px;
+            border-radius: 4px;
+            overflow: hidden;
+            position: relative;
+        }
+        &__info-icon{
+            background-color: rgba(255, 255, 255, 0.75);
+            border-radius: 4px 0 4px 0;
+            width: 16px;
+            height: 16px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: absolute;
+            bottom: 0;
+            right: 0;
+        }
+        &__name{
+            margin-top: 8px;
+            text-align: center;
+            font-size: 12px;
+            line-height: 16px;
+        }
+    }
     .input-box{
         width: 100%;
         &-row{
